tests/rascal/negative/type_errors/L1/11_expression_ES10_D4_29.ob
MODULE Test11;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
  (* error *)  z := ((- (- (q * 1))) + (((z MOD x) * (200 + y)) MOD ((+ 1223) * (1 MOD 1223))));
               x := (+ (((1223 - x) - (x MOD x)) * ((+ 0) DIV (- 1))));
               q := (((+ (1 - x)) DIV ((+ 1) + (1 - 1))) > (((- 2) - (2 + 2)) - ((- 1223) DIV (y * x))));
               z := ((- ((1 DIV 1) * (z * 200))) * (- (- (+ z))));
               y := (+ (- (+ (200 DIV 1223))));
               p := ((((z - z) + (z - 2)) + ((x - 200) * (200 MOD 2))) >= (+ ((x DIV 0) - (z - 1))));
               z := ((+ ((2 * x) DIV (y - 200))) DIV (((x - 200) + (200 MOD 0)) - ((- 1223) + (0 MOD z))));
               p := (((- (x MOD y)) + ((- 2) - (0 MOD z))) < ((+ (2 * 2)) - ((y * 1223) - (200 - x))));
               z := (((+ (1 DIV 200)) + ((200 MOD z) + (- 1223))) * (- (+ (1223 DIV y))));
               q := ((((+ 200) + (1 + 1223)) DIV ((1 MOD x) * (z * 1223))) < (+ (- (+ z))))
END Test11.